--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <button type="button" class="btn btn-outline-primary btn-lg">4</button>
             <button type="button" class="btn btn-outline-primary btn-lg">5</button>
             <button type="button" class="btn btn-outline-primary btn-lg">6</button>
-            <button type="button" class="btn btn-outline-success btn-lg"><b>/</b></button>
+            <button type="button" class="btn btn-outline-success btn-lg"><b>÷
+            </b></button>
             <button type="button" class="btn btn-outline-success btn-lg">x</button><br>
             <button type="button" class="btn btn-outline-primary btn-lg">1</button>
             <button type="button" class="btn btn-outline-primary btn-lg">2</button>
