--- a/index.html
+++ b/index.html
@@ -12,36 +12,49 @@
                 font-weight: bold;
                 font-size: xx-large;
             }
+            .container{
+                border: blue dotted 3px;
+                width: 300px;
+                text-align: center;
+                gap: 30px;
+                background-color: rgb(230, 226, 230);
+            }
+            input[type="text"]{
+                width: 250px;
+                height: 50px;
+            }
+            body{
+                background-color: rgb(255, 0, 0);
+            }
         </style>
 </head>
 
 <body>
     <div class="container">
         <div class="buttons">
-            <input><br><br>
-            <button type="button" class="btn btn-outline-primary btn-lg">7</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">8</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">9</button>
-            <button class="btn btn-outline-danger btn-lg">DEL</button>
-            <button class="btn btn-outline-danger btn-lg">AC</button><br>
-            <button type="button" class="btn btn-outline-primary btn-lg">4</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">5</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">6</button>
-            <button type="button" class="btn btn-outline-success btn-lg"><b>÷
+            <input type="text" id="display"><br><br>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('7')">7</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('8')">8</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('9')">9</button>
+            <button class="btn btn-outline-danger btn-lg" onclick="clearDisplay()">C</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('4')">4</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('5')">5</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('6')">6</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="addTodisplay('/')"><b>÷
             </b></button>
-            <button type="button" class="btn btn-outline-success btn-lg">x</button><br>
-            <button type="button" class="btn btn-outline-primary btn-lg">1</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">2</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">3</button>
-            <button type="button" class="btn btn-outline-success btn-lg">-</button>
-            <button type="button" class="btn btn-outline-success btn-lg">+</button><br>
-            <button type="button" class="btn btn-outline-primary btn-lg">0</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">.</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg">EXP</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg">ANS</button>
-            <button type="button" class="btn btn-outline-success btn-lg">=</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('1')">1</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('2')">2</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('3')">3</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="addTodisplay('*')">x</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('0')">0</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="addTodisplay('.')">.</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="addTodisplay('-')">-</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="addTodisplay('+')">+</button>
+            <button class="btn btn-outline-danger btn-lg">DEL</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="calculate()">=</button>
         </div>
     </div>
+    <script src="script.js"></script>
 
 
 
